--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Todo sobre los Hámsters</title>
-		<meta name="description" content="Los hámsters son pequeños roedores a diferencia de otros roedores estos se caracterizan por tener la cola corta, patas gordas, orejas pequeñas y el color puede variar dependiendo de la raza."/>
+		<meta name="description" content="Los hámsters son pequeños roedores a diferencia de otros roedores estos se caracterizan por tener la cola corta, patas gordas, orejas pequeñas y el color puede variar dependiendo de la raza.">
 	<head/>
 	<body>
 	
