--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Todo sobre los Hámsters</title>
 		<meta name="description" content="Los hámsters son pequeños roedores a diferencia de otros roedores estos se caracterizan por tener la cola corta, patas gordas, orejas pequeñas y el color puede variar dependiendo de la raza.">
 	<head/>
