--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Todo sobre los Hámsters</title>
-		<meta name="description" content="Los hámsters son pequeños roedores a diferencia de otros roedores estos se caracterizan por tener la cola corta, patas gordas, orejas pequeñas y el color puede variar dependiendo de la raza.">
-	<head/>
+		<meta name="description" content="Los hámsters son pequeños roedores, caracterizados por tener la cola corta, patas gordas, orejas pequeñas y el color puede variar dependiendo de la raza">
+	</head>
 	<body>
 	
 		<h1>HÁMSTERS</h1>
